[metadata]
name = ipwhois
version = 1.3.0
author = Philip Hane
author_email = secynic@gmail.com
license = BSD
description = Retrieve and parse whois data for IPv4 and IPv6 addresses.
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords =
    Python, WHOIS, RWhois, Referral Whois, ASN, IP Address, IP, IPv4, IPv6,
    IETF, REST, Arin, Ripe, Apnic, Lacnic, Afrinic, NIC, National Information
    Center, RDAP, RIR, Regional Internet Registry, NIR, National Internet
    Registry, ASN origin, Origin
url = https://github.com/secynic/ipwhois
download_url = https://github.com/secynic/ipwhois/tarball/master
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet
    Topic :: Software Development

[options]
packages = ipwhois, ipwhois.scripts
install_requires =
    dnspython
    ipaddr==2.2.0;python_version<"3.3"
    defusedxml

[options.entry_points]
console_scripts =
    ipwhois_cli = ipwhois.scripts.ipwhois_cli:main
    ipwhois_utils_cli = ipwhois.scripts.ipwhois_utils_cli:main

[options.package_data]
ipwhois = data/*.xml; data/*.csv

[bdist_wheel]
universal=1